--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -69,3 +69,108 @@ height: 32px;
     padding: 5px;
     color:#2281c2;
 }
+
+.container .hero{
+    display: flex;
+    padding-top: 0;
+    padding-bottom: 0;
+    flex-direction: row;
+    color: #fff;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+}
+
+.div_form_horizontal_form {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+.rebrand-link-block {
+    width: 60%;
+    margin: 0 auto;
+    clear: none;
+}
+
+
+.w-form {
+    margin: 0 0 15px;
+}
+
+.form-section{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.url-btn{
+    margin-left: 8px;
+    background: #2281c2;
+
+    color: #fff;
+ 
+    border: 1px solid transparent;
+    /* padding: 8px; */
+    border-radius: 7px;
+}
+
+.shortened-links-list {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.shortened-links-list-item:first-child {
+    margin-top: 25px;
+}
+.links-list-item.shortened-links-list-item-copy {
+    position: relative;
+}
+
+.shortened-links-list-item {
+    width: 100%;
+    border: 1px solid #02af63;
+    background: #fff;
+    border-radius: 4px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px 0;
+    padding: 12px;
+    animation: .2s ease-out;
+}
+
+.shortened-links-list-item .origin-link {
+    color: #263849;
+    font-size: 20px;
+    white-space: nowrap;
+}
+
+.shortened-links-list-item .origin-link, .shortened-links-list-item .short-link {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 37%;
+}
+
+.shortened-links-list-item .short-link {
+    color: #3180c5;
+    font-size: 20px;
+}
+
+.shortened-links-list-item .copy-link{
+    color: #3180c5;
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+    padding: 4px 15px;
+    border-radius: 4px;
+}
+
+a{
+    color:#3180c5 ;
+    text-decoration: none;
+}
