--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,5 +1,6 @@
-.midsection{
-
+.app{
+    margin:0;
+    padding:0
 }
 
 #navbarNav{
@@ -173,4 +174,65 @@ height: 32px;
 a{
     color:#3180c5 ;
     text-decoration: none;
+}
+.banner-content-block {
+    width: 62%;
+}
+
+.banner-text-block {
+    margin-bottom: 36px;
+}
+
+h1 {
+    margin-bottom: 16px;
+    font-family: sans-serif;
+    font-size: 46px;
+    line-height: 54px;
+    font-weight: 500;
+    letter-spacing: -.1px;
+}
+
+.p-lg-2.text-dark_hero {
+    display: block;
+    width: 84%;
+    margin-top: 10px;
+    color: #595d66;
+    font-size: 20px;
+}
+
+.Button {
+    font-family: sans-serif!important;
+    font-weight: 400;
+}
+
+.Button--primary {
+    background: #2281c2;
+   
+    color: #fff;
+   
+    border: 1px solid transparent;
+}
+
+.Button--lg {
+    padding: 10px 30px;
+    font-size: 1.25rem;
+    font-size: var(--display-small);
+    line-height: 1.4;
+}
+.Button--block {
+    width: 100%;
+}
+
+.hero-container {
+    position: relative;
+}
+
+.hero-cta {
+    width: 466.93px;
+}
+
+.hero-container img {
+    max-width: 100%;
+    vertical-align: middle;
+    display: inline-block;
 }
